Add administration Part: user management + metrics + health

--- a/epi/src/main/webapp/i18n/fr/global.json
+++ b/epi/src/main/webapp/i18n/fr/global.json
@@ -125,7 +125,8 @@
 			"preview": "Aperçu", 
 			"upload": "Upload",
 			"download": "Télécharger",
-			"search": "Chercher"
+			"search": "Chercher", 
+			"reset": "Réinitialiser"
 		},
 
 		"detail": 
