--- a/epi/src/main/webapp/i18n/fr/user.management.json
+++ b/epi/src/main/webapp/i18n/fr/user.management.json
@@ -15,12 +15,14 @@
             "title": "Utilisateur"
         },
         "login": "Login",
+        "name": "Nom & Prénom",
         "firstName": "Prénom",
         "lastName": "Nom",
         "email": "Email",
         "activated": "Activé",
         "deactivated": "Désactivé",
-        "profiles": "Droits",
+        "status": "Statut",
+        "profiles": "Profile",
         "langKey": "Langue",
         "createdBy": "Créé par",
         "createdDate": "Créé le",
