correct merge problem + add new mediaLink

--- a/epi/src/main/webapp/i18n/fr/exercise.json
+++ b/epi/src/main/webapp/i18n/fr/exercise.json
@@ -17,7 +17,9 @@
 		"students.placeholder": "Sélectionnez les elèves",
 		"teachers": "Enseignants",
 		"teachers.placeholder": "Sélectionnez les enseignants",
-		"medias": "medias",
+		"medias": "Medias",
+		"newlink": "Nouvau Lien",
+		"medialink.placeholder":"http://www.youtube.com/embed/XXXXXXXXXXX",
 		"create": 
 		{
 			"title": "Créer un EPI"
