--- a/epi/src/main/webapp/i18n/fr/global.json
+++ b/epi/src/main/webapp/i18n/fr/global.json
@@ -124,7 +124,7 @@
 			"addcontent" : "Contenu",
 			"addinfos" : "Informations", 
 			"preview": "Aperçu", 
-			"upload": "Upload",
+			"upload": "Charger un fichier",
 			"download": "Télécharger",
 			"search": "Chercher", 
 			"reset": "Réinitialiser"
