load user from file

--- a/epi/src/main/webapp/i18n/fr/exercise.json
+++ b/epi/src/main/webapp/i18n/fr/exercise.json
@@ -18,6 +18,7 @@
 		"teachers": "Enseignants",
 		"teachers.placeholder": "Sélectionnez les enseignants",
 		"noDataFound" : "Aucune donnée trouvée",
+		"insertNewImage": "Insérer une nouvelle Image",
 		
 		"media": 
 		{ 	"medias": "Medias",
