--- a/epi/src/main/webapp/i18n/fr/user.management.json
+++ b/epi/src/main/webapp/i18n/fr/user.management.json
@@ -27,7 +27,8 @@
         "createdBy": "Créé par",
         "createdDate": "Créé le",
         "lastModifiedBy": "Modifié par",
-        "lastModifiedDate": "Modifié le"
+        "lastModifiedDate": "Modifié le",
+        "countTeachingExercise": "EPI liés"
     }
 }
 
