--- a/epi/src/main/webapp/i18n/fr/class.management.json
+++ b/epi/src/main/webapp/i18n/fr/class.management.json
@@ -9,7 +9,7 @@
         "updated": "An user is updated with identifier {{ param }}",
         "deleted": "An user is deleted with identifier {{ param }}",
         "delete": {
-            "question": "Etes-vous certain de vouloir supprimer la classe {{ name }} ?"
+            "question": "Etes-vous certain de vouloir supprimer la classe:  {{ name }} ?"
         },
         "detail": {
             "title": "Classe"
@@ -18,7 +18,9 @@
         "level" : "Niveau", 
         "schoolYear" : "Année scolaire", 
         "name" : "Nom", 
-        "completeName" : "Nom complet"
+        "completeName" : "Nom complet", 
+        "students" : "Élèves", 
+        "classes" : "Classes"
     }
 }
 
