Fix password issue

--- a/epi/src/main/webapp/i18n/fr/password.json
+++ b/epi/src/main/webapp/i18n/fr/password.json
@@ -1,6 +1,6 @@
 {
     "password": {
-        "title": "Changer le mot de passe pour [<b>{{username}}</b>]",
+        "title": "Changer le mot de passe pour:  {{username}}",
         "form": {
             "button": "Sauvegarder"
         },
