--- a/epi/src/main/webapp/i18n/en/global.json
+++ b/epi/src/main/webapp/i18n/en/global.json
@@ -2,6 +2,7 @@
     "global": {
         "title": "EPI",
         "browsehappy": "You are using an <strong>outdated</strong> browser. Please <a href=\"http://browsehappy.com/?locale=en\">upgrade your browser</a> to improve your experience.",
+        "loginFailMessage":"Authentication failed: check your user name and password",
         "menu": {
             "home": "Home",
             "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
