--- a/epi/src/main/webapp/i18n/fr/global.json
+++ b/epi/src/main/webapp/i18n/fr/global.json
@@ -3,6 +3,7 @@
 	{
 		"title": "Base numérique EPI",
 		"browsehappy": "Vous utilisez un <strong>ancien</strong> navigateur. Veuillez <a href=\"http://browsehappy.com/?locale=fr\">mettre à jour votre navigateur</a> pour une meilleure expérience.",
+		"loginFailMessage":"L'authentification a échoué, vérifiez votre login et votre mot de passe",
 		"menu": 
 		{
 			"home": "Accueil",
